# CurDRF

./: .env_example  Dockerfile  Readme.MD  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
config/: __init__.py  celery.py  settings.py  urls.py
habit/: celery.py  models.py  pagination.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  views.py
habit/migrations/: 0001_initial.py
nginx/: Dockerfile  nginx.conf
tg_bot/: bot.py  tests.py  tg.py  utils.py
tg_bot/management/commands/: run_bot.py
user/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
user/management/commands/: CSU.py
user/migrations/: 0001_initial.py
